@@ -1,0 +1,5 @@
+from django.apps import AppConfig
+
+
+class OpenapiConfig(AppConfig):
+    name = 'openapi'
